@startuml
'https://plantuml.com/class-diagram

class App{
main()
start()
}


class InventoryController{
inventoryList: Listview
workList: ArrayList
observList: ObservableList
addName: TextField
addSerial: TextField
addValue: TextField
func: InventoryFunctions
infoBox()
refresh()
AddListItem()
removeItem()
editName()
editSerial()
editValue()
clearList()
sortValue()
sortSerial()
sortName()
saveCurrent()
loadOne()
searchSerial()
searchName()
sortAll()


}

class InventoryFunctions{
    prettyString()
    addItem()
    removeItem()
    editValue()
    editSerialNumber()
    editItemName()
    sortByValue()
    sortBySerialNumber()
    sortByName()
    searchByName()
    searchBySerialNumber()
    clearList()


}

class PopUpController{
closeBtnClick()
closeSaveClick()

}
javafx.Application <|-- App
App -- InventoryController
App -- PopUpController
InventoryController *--> InventoryFunctions
InventoryController *--> PopUpController


@enduml